--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title:             Clean Blog
+title:             yeomi's Blog
 email:             hsyeom92@gmail.com
-description:       A Blog Theme by Start Bootstrap
-author:            Start Bootstrap
+description:       Blog of developer
+author:            Yeom Hyeseon
 baseurl:           "/"
 url:               "http://yeomi92.github.io"
 
