--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dependencies": {
         "bootstrap": "4.3.1",
         "font-awesome": "4.7.0",
+        "github-markdown-css": "^3.0.1",
         "jquery": "3.3.1",
         "startbootstrap-clean-blog": "5.0.4"
     },
